--- a/index.html
+++ b/index.html
@@ -5,14 +5,37 @@
       <meta name="viewport" content="width=device-width">
       <title>Pixi tutorial</title>
       <style type="text/css" media="all">
-body{
-   margin:0;
-   padding:0;
-}
+@font-face { font-family: pixellari; src: url('fonts/pixellari.ttf'); }
+ span.hidden { 
+    font-family: pixellari, sans-serif;
+    opacity: 0;
+    font-size: 0;
+ }
+ .flex-container {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ #game{
+    width: auto;
+    border: 2px solid white;
+ }
+ body{
+    background-color: #000;
+    margin:0;
+    padding:0;
+ }
       </style>
       <script src="pixi.min.js"></script>
    </head>
    <body>
+      <div class="flex-container">
+         <div id="game"></div>
+      </div>
+      <span class="hidden">Dummy text</span>
       <script type="module" src="app.js"></script>
    </body>
 </html>
