--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
     align-items: center;
     justify-content: center;
  }
- #game{
-    width: auto;
-    border: 2px solid white;
- }
- body{
-    background-color: #000;
+ html, body {
+    height: 100%;
+    background-color: #211f2f;
     margin:0;
     padding:0;
  }
