--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width">
-      <title>Pixi tutorial</title>
+      <title>Pixi slides</title>
       <style type="text/css" media="all">
 @font-face { font-family: pixellari; src: url('fonts/pixellari.ttf'); }
  span.hidden { 
