Hide scrolling by default

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     background-color: #211f2f;
     margin:0;
     padding:0;
+    overflow: hidden;
  }
       </style>
       <script src="pixi.min.js"></script>
